--- a/src/Frontend/scw/src/index.html
+++ b/src/Frontend/scw/src/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="../node_modules/primeicons/primeicons.css" />
-
+  <!--<link rel="stylesheet" type="text/css" href="../node_modules/primeicons/primeicons.css"/> -->
+  <!--<link rel="stylesheet" type="text/css" href="../node_modules/primeng/resources/themes/md-dark-deeppurple/theme.css"/> -->
 </head>
 <body class="mat-typography">
   <app-root></app-root>
